# openpi

./: .gitignore  .gitmodules  Pi0-Model-Note.md  README.md  pyproject.toml
.github/prompts/: hidden-state-to-text-steps.prompt.md  plan-ros2RosbagToLerobot.prompt.md  plan-ros2WebsocketBridge.prompt.md  planSeparateRobotBridges.prompt.md
examples/libero/: run_convert.sh  run_lerobot_data_vis.sh  visualize_dataset.py
examples/tracer/: Dockerfile  compose.yml  docker_run.sh  main.py
ros2_ws/src/pi_bridge/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/pi_bridge/launch/: websocket_bridge.launch.py
ros2_ws/src/pi_bridge/pi_bridge/: base_bridge.py  random_test_publisher.py  tracer_bridge.py  tracer_front_left_bridge.py  tracer_front_right_bridge.py  tracer_side_bridge.py  websocket_bridge_node.py
scripts/: run_tracer_soc3f_dinning_pantry.sh  run_training_from_commits.sh  run_training_from_raw_data.sh
scripts/docker/: serve_policy.Dockerfile
scripts/rosbag-to-lerobot/: convert_rosbag_to_lerobot.py  count_yaml_total_duration.py  describe_frame_ollama.sh  generate_vid_prompt_ollama.py  generate_vid_prompt_ollama.sh  ssh_bridge_ollama.sh  visualize_dataset.py
scripts/rosbag-to-lerobot/config/: metadata.example.yaml  topic_mapping.example.yaml  tracer_front_left_views_topic_mapping.yaml  tracer_front_right_views_topic_mapping.yaml  tracer_metadata.yaml  tracer_side_views_dinning_to_pantry_metadata.yaml  tracer_side_views_metadata.yaml  tracer_side_views_topic_mapping.yaml  tracer_topic_mapping.yaml
src/openpi/models/: pi0.py
(+8 files in other folders)
